[package]
name = "nullrefino"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notan = {version = "0.9.2", features = ["audio"]}
notan_audio = "0.9.2"
rand = "0.8.5"
rand_chacha = "0.3.1"
tetris_core_mod = {git = "https://github.com/duckfromdiscord/tetris_core_mod.git"}
szo_randomizer = {git = "https://github.com/duckfromdiscord/szo_randomizer.git"}

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = "debuginfo" # strip true does NOT work with wasm.
